passing contacted in order to not kep messaging

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Scheduly</title>
+  <title>The state of the art calendar that notifies your customers with text. | Scheduly</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
