--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Bree+Serif|Varela+Round|Libre+Baskerville" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Bree+Serif|Varela+Round|Libre+Baskerville|Roboto+Slab|Montserrat" rel="stylesheet">
 </head>
 
-<body style="background-color:#eee9d1">
+<body style="background-color:#f9fbfc">
   <app-root></app-root>
   <!-- TODO should look into getting from npm -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
