--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
     <script src="https://js.stripe.com/v3/"></script>
+    <script>
+     var stripe = Stripe('pk_test_IyAbAxs0SDqwmt1OkUHz3diy'); // use your test publishable key
+    var elements = stripe.elements();
+    </script>
 </body>
 
 </html>
